[gd_scene load_steps=3 format=3 uid="uid://bufjmcin331k"]

[ext_resource type="Script" uid="uid://c2nueds5ybrn1" path="res://scripts/card.gd" id="1_dd2wi"]
[ext_resource type="Texture2D" uid="uid://dvk00gefy0gis" path="res://sprites/card_Background.png" id="3_3ujke"]

[node name="Card" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -45.0
offset_right = 30.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(30, 45)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_dd2wi")

[node name="SuitIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 6.0
offset_bottom = 6.0
scale = Vector2(2, 2)

[node name="SuitIcon2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 66.0
offset_right = 45.0
offset_bottom = 75.0
scale = Vector2(2, 2)

[node name="RankLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 3.0
offset_right = 57.0
offset_bottom = 26.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="RankLabel2" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 64.0
offset_right = 26.0
offset_bottom = 87.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Background" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -45.0
offset_right = -10.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
texture = ExtResource("3_3ujke")
